Created basic HTML structure for Fiverr financial services article page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title> Simple Website </title>
-</head> 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>First Website</title>
+    <link rel="shortcut icon" href="./images/fiv.png" type="image/x-icon">
+</head>
 <body>
     <h3>Product News</h3>
     <h1>How Fiverr's Financial 
         Services Work For Freelancers
         And Entrepreneurs</h1>
-    <p><pre><b>By Fiverr Team </b> |   September18,2024</pre></p>
-    <img src="/png1.png">
+    <br>
+    <p><b>By Fiverr Team </b> |   September18,2024</p>
+
+    <img src="./images/png1.png" alt="">
     <br />
     <p>Today, Fiverr launched its new Financial Services Vertical, expanding its platform to offer nearly two dozen financial services to help businesses ranging from startups to established corporations-access specialized financial expertise. </p>
     <br />
@@ -26,15 +31,23 @@
     </p>
     <br />
     <p><b>About the author, Alexander Puutio:</b> Dr. T. Alexander Puutio has spent the last decade helping senior leadership at Boston Consulting Group and the United Nations, national governments and multinational corporations navigate complex decisions and challenging landscapes across a wide range of management, operations and business transformation topics. He holds a PhD. in Law from his native country, Finland, and is actively engaged in the academic exploration and teaching of business and society related topics at NYU Stern, Columbia SIPA and Harvard DCE where he adjuncts. Alexander is a recent Brooklyn transplant with two children and a boxer, and he enjoys mainstream business writing that demystifies the drivers of success in leadership and organizational strategy.</p>
-    <br /><br />
-    <img src="/icon.png" height="90" width="150">
+    <br>
+    <br>
+    <img height="90" width="150" src="./images/icon.png" alt="">
+
+    
     <hr>
-    <br />
-    <img src="/fiv.png" height="50" width="50"> <p><b> Fiverr Team </b></p>
-    <br />
-    <br />
-    <img src="/pd.png">
-    <p>
+    <br/>
+    <img height="50" width="50" src="./images/fiv.png" alt="">
+    
+
+    <h2>Fiverr Team </h2>
+    <br>
+    <br>
+
+    <img src="./images/pd.png" alt="">
+
+    <ol>
         <li><b>Categories</b></li>
         <li>Graphics & Design</li>
         <li>Digital Marketing</li>
@@ -49,17 +62,17 @@
         <li>Photography</li>
         <li>End-to-End Projects</li>
         <li>Sitemap</li>
-    </p>
-    <p>
-        <li><b>About</b></li>
+    </ol>
+ <ul>
+    <li><b>About</b></li>
         <li>Careers</li>
         <li>Press & News</li>
         <li>Partnerships</li>
         <li>Terms of Service</li>
         <li>Intellectual Property Claims</li>
         <li>Investor Relations</li>
-    </p>
-    <p>
+ </ul>
+    <ol>
         <li><b>Support</b></li>
         <li> Help & Support</li>
         <li>Trust & Safety</li>
@@ -70,11 +83,13 @@
         <li>Invoice Software</li>
         <li>Learn</li>
         <li>Online Courses</li>
-    </p>
+    </ol>
     <br />
     <hr>
-    <img src="/err.png" height="50" width="60">
+    <img height="50" width="60" src="./images/err.png" alt="">
+   
     <p> ©Fiverr International Ltd. 2024</p>
     <h2>Follow me </h2>
-    <img src="/11.png" height="40">
+    <img height="40" src="./images/11.png" alt="">
     </body>
+</html>
